# vertical-content-feed

./: .dockerignore  .env.template  .envrc.template  .gitignore  Dockerfile  Makefile  pyproject.toml
infra/: .terraform.lock.hcl  gateway.tf  lambda.tf  main.tf  repository.tf  variables.tf
src/: environment.py  main.py
src/models/: shared_post_model.py  video_model.py
templates/: mrss.j2
