[project]
name = "vertical-content-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.117.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff.lint]
select = ["I"]
